--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -14,4 +16,29 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+input[type="number"] {
+  padding-block: 1rem;
+  padding-inline: 0.5rem;
+  font-size: 1.25rem;
+  border-radius: 0.5rem;
+  margin-block: 1rem;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+h2 {
+  text-align: center;
+  font-size: clamp(1rem, 2vw, 2rem);
+  font-family: "Roboto", sans-serif;
+}
+h1 {
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+.container {
+  text-align: center;
 }
